# price-alert-bot

./: .env.example  Makefile  pyproject.toml
alembic/versions/: ff4ac2a9ecb3_initial_migration.py
app/: bot.py
app/core/: __init__.py  config.py  database.py  deps.py
app/models/: __init__.py  base.py  enums.py  user.py
